-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 6
-
Component/s: core-libs
-
b13
-
generic
-
solaris
-
Not verified
chmod() and access() used in UnixFileSystem_md.c currently do nothing when the the system
call returns an EINTR, which means chmod()/access() is interrupted by signal. Need figure
out how to handle this appropriately on Unix platform.
call returns an EINTR, which means chmod()/access() is interrupted by signal. Need figure
out how to handle this appropriately on Unix platform.
- relates to
-
JDK-8207340 (fs) UnixNativeDispatcher close and readdir usages should be fixed
-
- Resolved
-
-
JDK-8197498 (se) kevent polling should ignore signal interrupt (EINTR)
-
- Closed
-